Tooltip styles updated

--- a/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp-variables.scss
@@ -83,23 +83,6 @@ $shadow-color-from:        #ccc !default;
 $shadow-color-to:          #f8f8f8 !default;
 
 // BP Tooltips
-
-$tooltip-background:        $white !default;
-$tooltip-border:            $light-text-plus !default;
-$tooltip-border-radius:     1px !default;
-$tooltip-box-shadow:        4px 4px 8px rgba(0, 0, 0, 0.2) !default; // 1px 1px 0 1px rgba(132, 132, 132, 0.3) !default;
-$tooltip-font-family:       "Helvetica Neue", helvetica, arial, san-serif;
-$tooltip-font-size:         12px !default;
-$tooltip-font-weight:       400 !default;
-$tooltip-max-width:         200px !default;
-$tooltip-small-width:       100px !default;
-$tooltip-medium-width:      180px !default;
-$tooltip-large-width:       260px !default;
-$tooltip-xlarge-width:      360px !default;
-$tooltip-fit-width:         100% !default;
-$tooltip-padding-hor:       8px !default;
-$tooltip-padding-vert:      5px !default;
-$tooltip-text-color:        $black !default;
-$tooltip-tip-area:          7px !default; // bp-tooltip arrow's height, width, & margin
-$tooltip-tip-background:    $white !default;
-$tooltip-z-index:           100000 !default;
+$tooltip-background:    rgba(18, 43, 70, 0.95) !default;
+$tooltip-base-size:     10px !default;
+$tooltip-arrow-height:  6px !default;
