--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -899,6 +899,7 @@ body.post-type-bp-email .categorydiv label {
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 		box-sizing: border-box;
 		flex: 0 0 calc(33.33% - 20px);
+		min-width: 0;
 
 		.inside {
 			padding: 1.8em 2em;
@@ -1062,13 +1063,6 @@ body.post-type-bp-email .categorydiv label {
 
 @media screen and (min-width: 782px) {
 
-	.bp-help-card-grid {
-
-		/*.bp-help-card {
-			flex: 0 0 calc(50% - 20px);
-		}*/
-	}
-
 	.bp-help-sidebar {
 		background: #f9f9f9;
 		padding: 2.5em;
@@ -1077,6 +1071,7 @@ body.post-type-bp-email .categorydiv label {
 		-webkit-box-flex: 0;
 		-ms-flex: 0 0 200px;
 		flex: 0 0 200px;
+		min-width: 0;
 		overflow: initial;
 		width: 100%;
 		min-height: 60vh;
@@ -1087,6 +1082,7 @@ body.post-type-bp-email .categorydiv label {
 		-webkit-box-flex: 1;
 		-ms-flex: 1;
 		flex: 1;
+		min-width: 0;
 	}
 }
 
@@ -1096,6 +1092,7 @@ body.post-type-bp-email .categorydiv label {
 
 		.bp-help-card {
 			flex: 0 0 calc(50% - 20px);
+			min-width: 0;
 		}
 	}
 
@@ -1342,6 +1339,7 @@ body.post-type-bp-email .categorydiv label {
 .bp_appboss_wrap .appboss-column {
 	-webkit-box-flex: 1;
 	flex: 1;
+	min-width: 0;
 	width: 50%;
 	padding-right: 20px;
 }
@@ -1382,6 +1380,7 @@ body.post-type-bp-email .categorydiv label {
 	display: flex;
 	-webkit-box-flex: 1;
 	flex: 1 1 100px;
+	min-width: 0;
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
 	flex-direction: column;
