--- a/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_layouts.scss
@@ -159,6 +159,7 @@
 			> li {
 				flex: 0 0 50%;
 				max-width: 50%;
+				min-width: 0;
 
 				.item {
 					margin: 1rem auto 0;
@@ -186,6 +187,7 @@
 				padding-top: 0;
 				flex: 0 0 33.333333%;
 				max-width: 33.333333%;
+				min-width: 0;
 			} // close >li
 		}
 	} // .grid
@@ -203,6 +205,7 @@
 			> li {
 				flex: 0 0 25%;
 				max-width: 25%;
+				min-width: 0;
 			} // close > li
 		}
 	} // .grid
@@ -330,6 +333,7 @@
 			&.item-entry-header {
 				max-width: 100%;
 				flex: 100%;
+				min-width: 0;
 			}
 		}
 	}
@@ -426,7 +430,7 @@
 			-webkit-box-flex: 1;
 			-ms-flex: 1;
 			flex: 1;
-
+			min-width: 0;
 			padding-left: 20px;
 		}
 
