--- a/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_media.scss
@@ -9,16 +9,19 @@
 .act-grid-1-1 {
 	flex: 0 0 100%;
 	max-width: 100%;
+	min-width: 0;
 
 	.bb-media-length-2 & {
 		flex: 0 0 50%;
 		max-width: 50%;
+		min-width: 0;
 	}
 }
 
 .act-grid-1-2 {
 	flex: 0 0 50%;
 	max-width: 50%;
+	min-width: 0;
 }
 
 .bb-activity-media-elem {
@@ -94,6 +97,7 @@
 	.act-grid-1-2 {
 		flex: 0 0 33.33%;
 		max-width: 33.33%;
+		min-width: 0;
 	}
 
 	.bb-activity-media-elem.act-grid-1-2 .entry-img {
@@ -110,16 +114,19 @@
 	.act-grid-1-1 {
 		flex: 0 0 50%;
 		max-width: 50%;
+		min-width: 0;
 
 		+ .act-grid-1-2 {
 			flex: 0 0 50%;
 			max-width: 50%;
+			min-width: 0;
 		}
 	}
 
 	.act-grid-1-2 {
 		flex: 0 0 33.33%;
 		max-width: 33.33%;
+		min-width: 0;
 	}
 }
 
@@ -132,10 +139,12 @@
 	.act-grid-1-1.bb-vertical-layout {
 		flex: 0 0 64%;
 		max-width: 64%;
+		min-width: 0;
 
 		~ .bb-activity-media-elem {
 			flex: 0 0 36%;
 			max-width: 36%;
+			min-width: 0;
 
 			.entry-img {
 				padding-top: 105.6%;
@@ -160,10 +169,12 @@
 	.act-grid-1-1.bb-vertical-layout {
 		flex: 0 0 64%;
 		max-width: 64%;
+		min-width: 0;
 
 		~ .bb-activity-media-elem {
 			flex: 0 0 36%;
 			max-width: 36%;
+			min-width: 0;
 
 			.entry-img {
 				padding-top: 69.1%;
@@ -199,16 +210,19 @@
 	.act-grid-1-1 {
 		flex: 0 0 50%;
 		max-width: 50%;
+		min-width: 0;
 
 		+ .act-grid-1-2 {
 			flex: 0 0 50%;
 			max-width: 50%;
+			min-width: 0;
 		}
 	}
 
 	.act-grid-1-2 {
 		flex: 0 0 33.33%;
 		max-width: 33.33%;
+		min-width: 0;
 	}
 }
 
@@ -432,6 +446,7 @@
 
 	li {
 		flex: 0 0 20%;
+		min-width: 0;
 		margin: 0;
 		padding: 5px;
 	}
@@ -608,6 +623,7 @@ a.bb-close-model {
 
 .bb-media-info-section {
 	flex: 0 0 100%;
+	min-width: 0;
 
 	.item-title {
 		margin-bottom: 2px;
@@ -879,6 +895,7 @@ ul.bb-albums-list {
 		-ms-flex: 0 0 25%;
 		flex: 0 0 25%;
 		max-width: 25%;
+		min-width: 0;
 		padding: 5px;
 	}
 
@@ -995,10 +1012,12 @@ ul.bb-albums-list {
 
 	.bb-media-section {
 		flex: 1;
+		min-width: 0;
 	}
 
 	.bb-media-info-section {
 		flex: 0 0 376px;
+		min-width: 0;
 	}
 }
 
@@ -1037,6 +1056,7 @@ ul.bb-albums-list {
 		-ms-flex: 0 0 50%;
 		flex: 0 0 50%;
 		max-width: 50%;
+		min-width: 0;
 	}
 
 	.bb-album-list-item .bs-cover-wrap {
