--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -570,7 +570,7 @@ body.users_page_bp-signups td.count_sent {
   width: 100%;
   height: 100%;
   display: block;
-  bottom: 0px;
+  bottom: 0;
   right: 10px;
   background-size: 40px 30px;
   max-width: 40px;
