--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -580,7 +580,7 @@ body.users_page_bp-signups td.count_sent {
 	width: 100%;
 	height: 100%;
 	display: block;
-	bottom: 0px;
+	bottom: 0;
 	left: 10px;
 	background-size: 40px 30px;
 	max-width: 40px;
