--- a/src/bp-core/css/emojionearea-edited-rtl.css
+++ b/src/bp-core/css/emojionearea-edited-rtl.css
@@ -252,7 +252,7 @@
 	-webkit-border-radius: 5px;
 	border-radius: 5px;
 	height: 340px;
-	width: 312px;
+	width: 300px;
 	top: -15px;
 	left: -15px;
 	z-index: 90;
@@ -275,7 +275,7 @@
 .emojionearea .emojionearea-picker .emojionearea-wrapper {
 	position: relative;
 	height: 340px;
-	width: 312px;
+	width: 300px;
 }
 
 .emojionearea .emojionearea-picker .emojionearea-wrapper:after {
@@ -302,7 +302,7 @@
 	display: block;
 	float: right;
 	height: 40px;
-	width: 34px;
+	width: 32px;
 	filter: inherit;
 	padding: 0;
 	cursor: pointer;
@@ -362,15 +362,15 @@
 	float: right;
 	padding: 0;
 	height: 30px;
-	width: 160px;
+	width: 140px;
 }
 
 .emojionearea .emojionearea-picker .emojionearea-search > input {
 	outline: none;
 	width: 100%;
-        min-width: 100%;
-        height: 30px;
-        margin: 0;
+	min-width: 100%;
+	height: 30px;
+	margin: 0;
 }
 
 .emojionearea .emojionearea-picker .emojionearea-tones {
@@ -498,7 +498,7 @@
 	background: #FFFFFF;
 	line-height: 20px;
 	margin: 0;
-	padding: 10px;
+	padding: 10px 4px;
 }
 
 .emojionearea .emojionearea-picker .emojionearea-scroll-area .emojionearea-category-title:after, .emojionearea .emojionearea-picker .emojionearea-scroll-area .emojionearea-category-title:before {
@@ -508,11 +508,11 @@
 }
 
 .emojionearea .emojionearea-picker .emojionearea-scroll-area .emojionearea-category-block {
-	padding: 0 7px 0 0;
+	padding: 0;
 }
 
 .emojionearea .emojionearea-picker .emojionearea-scroll-area .emojionearea-category-block > .emojionearea-category {
-	padding: 0 !important;
+	padding: 0 6px !important;
 }
 
 .emojionearea .emojionearea-picker .emojionearea-scroll-area .emojionearea-category-block > .emojionearea-category:after, .emojionearea .emojionearea-picker .emojionearea-scroll-area .emojionearea-category-block > .emojionearea-category:before {
