--- a/src/bp-templates/bp-nouveau/css/buddypress.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress.css
@@ -1254,7 +1254,7 @@ a.layout-grid-view {
 
 .gif-media-search-dropdown.open {
   display: block;
-  width: 400px;
+  width: 300px;
 }
 
 .gif-media-search-dropdown:before {
@@ -1274,6 +1274,12 @@ a.layout-grid-view {
   box-shadow: 2px -3px 3px 0 rgba(0, 0, 0, 0.02);
   transition: all linear 0.2s;
   z-index: 101;
+}
+
+@media screen and (min-width: 768px) {
+  .gif-media-search-dropdown.open {
+    width: 360px;
+  }
 }
 
 .gif-search-query {
@@ -1331,7 +1337,7 @@ a.layout-grid-view {
 .found-media-item img {
   width: 100%;
   height: 100%;
-  min-width: 180px;
+  min-width: 100%;
 }
 
 input.search-query-input {
