--- a/src/bp-core/admin/css/common-rtl.css
+++ b/src/bp-core/admin/css/common-rtl.css
@@ -952,13 +952,12 @@ body.post-type-bp-email .categorydiv label {
 }
 
 .bp-help-card-grid .bp-help-card .inside {
-  padding: 1.8em 2em;
+  padding: 1.8em 2em 5em;
 }
 
 .bp-help-card-grid .bp-help-card h2 {
-  border-bottom: 1px solid #eaeaea;
   font-size: 18px;
-  padding: 0 0 1em;
+  padding: 0;
   margin: 0 0 1em;
   line-height: 1.4;
 }
