--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -966,19 +966,18 @@ body.post-type-bp-email .categorydiv label {
 		margin: 0 10px 2%;
 		background-color: #fff;
 		border: 1px solid #e5e5e5;
-		border-radius: 6px;
+		border-radius: 5px;
 		box-shadow: 0 1px 1px rgba(0, 0, 0, 0.04);
 		box-sizing: border-box;
 		flex: 0 0 calc(33.33% - 20px);
 
 		.inside {
-			padding: 1.8em 2em;
+			padding: 1.8em 2em 5em;
 		}
 
 		h2 {
-			border-bottom: 1px solid #eaeaea;
 			font-size: 18px;
-			padding: 0 0 1em;
+			padding: 0 ;
 			margin: 0 0 1em;
 			line-height: 1.4;
 		}
