Fixed - search loader issue

--- a/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
+++ b/src/bp-templates/bp-nouveau/common-styles/_bp_global_search.scss
@@ -434,7 +434,7 @@ div.search_results .groups-list li .last-activity {
 	justify-content: center;
 }
 
-.bp-search-ac .loading-msg span {
+.bp-search-ac .loading-msg .bb_global_search_spinner {
 	background: url(../images/spinner.png) no-repeat center;
 	background-size: 100% 100%;
 	width: 19px;
