--- a/src/bp-core/admin/sass/common.scss
+++ b/src/bp-core/admin/sass/common.scss
@@ -1128,6 +1128,16 @@ body.post-type-bp-email .categorydiv label {
 		border-radius: 5px;
 		box-shadow: 0 3px 20px -1px rgba(7, 10, 25, 0.1);
 	}
+
+	.article-child  {
+		> ul > li{
+			list-style-type: none;
+		}
+
+		.actions, .sub-menu-count {
+			display: none;
+		}
+	}
 }
 
 @media screen and (min-width: 782px) {
